# botzo

./: .gitignore  404.html  4legsWalkFIRSTSTEP.ino  Controller_Reading.py  IK_Funcs.py  IK_Sender_Jorge.py  IK_solver_oneleg3DoF.ipynb  MPU_getAngles.ino  README.md  basic.py  controller_reader_Jorge.py  hello_bullet2.py  hello_bullet3.py  hello_bullet4.py  hello_bullet5.py  index.html  mkdocs.yml  serial_sender.py  sitemap.xml  sketch_oct27a.ino  stabilization_control.py  test_imu_stabilization.py
botzo_ros2_ws/: CMakeLists.txt  README.md  package.xml
botzo_ros2_ws/botzo_description/: package.xml  setup.cfg  setup.py
botzo_ros2_ws/botzo_description/botzo_description/: move_joint.py
botzo_ros2_ws/botzo_description/launch/: display.launch.py
botzo_ros2_ws/botzo_description/meshes/: BL_shoulder.stl  BL_tibia.stl  FL_femur.stl  FL_tibia.stl
botzo_ros2_ws/botzo_description/rviz_config/: display.rviz
botzo_ros2_ws/botzo_description/urdf/: botzo.urdf
botzo_ros2_ws/botzo_ik/: package.xml  setup.cfg  setup.py
botzo_ros2_ws/botzo_ik/botzo_ik/: joint_publisher.py
botzo_ros2_ws/botzo_messages/: CMakeLists.txt  package.xml
botzo_ros2_ws/botzo_messages/msg/: TargetEndEffectors.msg
botzo_ros2_ws/launch/: display.launch.py
botzo_ros2_ws/rviz_config/: display.rviz
botzo_ros2_ws/src/: move_joint.py
botzo_ros2_ws/urdf/: botzo.urdf
client/: README.md  main.py  pyproject.toml
client/botzo_sdk/: __init__.py  logger.py
client/client/: botzo_client.py  logger.py
client/examples/: event_triggered.py  simple_ping.py
client/tests/: test_interface.py  test_protocol.py
docs/: index.md
(+330 files in other folders)
